--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,52 @@
+# Python
 __pycache__/
-*.pyc
-.env
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+.eggs/
+dist/
+build/
+*.egg
+
+# Virtual environments
+venv/
+.venv/
+ENV/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
-data/work/*
+Thumbs.db
+
+# Environment
+.env
+.env.local
+*.local
+
+# Data - trabajo temporal
+data/work/
 data/staging/*
 !data/staging/.keep
-data/wal/*
+data/wal/
+data/temp/
+data/drafts/
+data/section_notes/
 
+# Indices (regenerables)
+data/index/
+
+# Mantener estructura
+!data/inbox/
+data/inbox/*
+!data/inbox/raw_classes/
+
+# Logs
+*.log
+logs/
